# Weather-Monitoring-System

./: .env  README.md  app.py  database.py  models.py  pyproject.toml  weather_processor.py  weather_service.py
static/: index.html
